--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	<section class="invoice-gen-form">
 		<div class="container">
-				<h2 class="text-center banner-heading">Generate Your Invoice - Screen One</h2>
+				<h2 class="text-center banner-heading">Generate Your Invoice - Example 02</h2>
 				    <form>
 						<div class="row">
 							<div class="form-group col-xs-12 col-sm-3">
