--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="navbar-header">
-						<a href="#" class="navbar-brand custom-logo">Doctor Webapp</a>
+						<a href="#" class="navbar-brand custom-logo">Doctors App</a>
 					</div>
 				</div>
 			</div>
