--- a/receipt.html
+++ b/receipt.html
@@ -25,7 +25,7 @@
 	
 	<section class="receipt-gen-form">
 		<div class="container">
-				<h2 class="text-center banner-heading">Generate Your Receipt - Screen Two</h2>
+				<h2 class="text-center banner-heading">Generate Your Receipt - Screen 2</h2>
 				    <form>
 						<div class="invoice-box">
 						<table cellpadding="0" cellspacing="0">
